# VolveRAG

./: .gitattributes  .gitignore  DATA_POLICY.md  EXTERNAL_TOOLS.md  LICENSE  README.md  commit_vectorstore.ps1
.github/workflows/: tests.yml
advanced_rag/: .coveragerc  CHANGELOG.md  COMMIT_MESSAGE_PHASE_2.md  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  PHASE_0_1_SUMMARY.md  PHASE_0_IMPLEMENTATION.md  PHASE_1_3_ANALYSIS.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION.md  PUBLICATION_CHECKLIST.md  README.md  REPORT_TYPES_IMPROVEMENTS.md  SETUP.md  VERIFICATION.md  install_antiword.ps1  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_web_app.bat  run_web_app.sh  test_query.py  test_report_types.py  web_app.py
advanced_rag/data/vectorstore/: chroma.sqlite3
advanced_rag/docs/: ARCHITECTURE.md  MIGRATION.md  conf.py  index.rst
advanced_rag/docs/api/: core.rst  graph.rst  tools.rst
advanced_rag/scripts/: run_evaluation.py
advanced_rag/src/: __init__.py  state.py
advanced_rag/src/core/: __init__.py  cache.py  compat.py  config.py  container.py  decorators.py  exceptions.py  logging.py  monitoring.py  path_resolver.py  result.py  security.py  thresholds.py  tool_adapter.py  validation.py  well_utils.py
advanced_rag/src/evaluation/: __init__.py  benchmark.py  evaluator.py  test_suite.py
advanced_rag/src/graph/: __init__.py  nodes.py  rag_graph.py
advanced_rag/src/loaders/: __init__.py  document_loader.py
advanced_rag/tests/: __init__.py  conftest.py
advanced_rag/web_app/: app.py
(+69 files in other folders)
